# peering

./: .gitignore  CMakeLists.txt  Peering.lean  PeeringReplay.lean  README.md  lake-manifest.json  lakefile.toml  peer_info.h  peering_state.cc  peering_state.h  peering_types.h  roadmap.md
.github/workflows/: ci.yml
Peering/: Image.lean  Invariants.lean  Machine.lean  Replay.lean  Types.lean  Visibility.lean
cpp/: CMakeLists.txt  cross_validate.cc  peer_info.h  peering_state.cc  peering_state.h  peering_types.h
docs/: idris-reference-notes.md  lean-design-summary.md  pg-journal-model.md  replay-triage.md
idris/: peering.ipkg
idris/src/: ImageMain.idr
idris/src/Peering/: Common.idr  ImageInvariants.idr  ImageMachine.idr  ImageObservation.idr  ImageProcess.idr  ImageProofs.idr  ImageRefinement.idr  ImageReplayCheck.idr  ObjectImage.idr  Types.idr
scripts/: replay_fuzz.py
